Correct alignment.

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body{
     background-color: rgb(255, 255, 255);
     display: inline-flex;
     flex-direction: column;
-    width: 35%;
+    width: 42%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10%;
@@ -64,11 +64,12 @@ body{
     padding-top: 10px;
     padding-bottom: 15px;
     padding-left: 25px;
+    margin-bottom: 15px;
 }
 
 .small-container li::marker{
     color: hsl(332, 51%, 32%);
-    size: 5px;
+    font-size: 15px;
 }
 
 .list-title {
@@ -82,7 +83,51 @@ body{
 
 li {
     padding: 5px;
+    padding-left: 2em;
+    margin-left: -1em;
+
 }
+
+h2{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: "Young Serif";
+    font-size: 28px;
+    font-weight: 400;
+    color: hsl(14, 45%, 36%);
+}
+
+.list2 li::marker{
+    color: hsl(14, 45%, 36%);
+    font-size: 15px;
+}
+
+.list2 li {
+    padding: 5px;
+    padding-left: 2em;
+    margin-left: -0.5em;
+
+}
+
+.ln{
+    width:100%; 
+    height:2px; 
+    background: hsl(30, 18%, 87%);
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.list3 li::marker{
+    color: hsl(14, 45%, 36%);
+    font-size: 15px;
+    font-weight: 800;
+}
+
+.list3 li{
+    margin-left: -1em;
+    padding: 10px;
+}
+
 
 table{
     border-collapse: collapse;
